--- a/congNgheMoi/package.json
+++ b/congNgheMoi/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mariadb": "^3.4.1",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.7"
