--- a/congNgheMoi/package.json
+++ b/congNgheMoi/package.json
@@ -18,6 +18,7 @@
     "mariadb": "^3.4.1",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   }
 }
